<resources>
    <string name="app_name">Dev Task2</string>
    <string name="name1">Name</string>
    <string name="button1">Button</string>
    <string name="developers_task_no2">Developers Tasks!</string>
    <string name="welcome">Welcome To The App!!!</string>
    <string name="signup">sign up</string>
    <string name="sign_up">Sign Up</string>
    <string name="password1">Password</string>
    <string name="email1">E-mail</string>
    <string name="name">Name</string>
    <string name="submit_btn">submit</string>
    <string name="welcome2">Welcome To Our App!</string>
    <string name="menu1" />
    <string name="menu" />
    <string name="todo">TODO</string>
    <string name="submit4">submit</string>
    <string name="log_in">Log in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="email5">email</string>
    <string name="name5">name</string>
</resources>